Move samples into library

--- a/nes-samples/Cargo.toml
+++ b/nes-samples/Cargo.toml
@@ -9,6 +9,7 @@ assembler = { path = "../assembler" }
 mos6502 = { path = "../mos6502" }
 nes = { path = "../nes" }
 ines = { path = "../ines" }
+samples = { path = "../samples" }
 
 [[example]]
 name = "infinite_loop"
