--- a/nes-samples/Cargo.toml
+++ b/nes-samples/Cargo.toml
@@ -15,6 +15,9 @@ samples = { path = "../samples" }
 name = "counter"
 
 [[example]]
+name = "factorial"
+
+[[example]]
 name = "infinite_loop"
 
 [[example]]
@@ -40,3 +43,6 @@ name = "stack_status_register"
 
 [[example]]
 name = "store_accumulator"
+
+[[example]]
+name = "wide_factorial"
