--- a/nes_emulator/Cargo.toml
+++ b/nes_emulator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nes-emulator"
+name = "nes_emulator"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
