Saveing and restoring machine state

--- a/mos6502/Cargo.toml
+++ b/mos6502/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1.0", features = ["serde_derive"] }
