--- a/nes_emulator/Cargo.toml
+++ b/nes_emulator/Cargo.toml
@@ -9,3 +9,5 @@ simon = "0.2"
 mos6502 = { path = "../mos6502" }
 ines = { path = "../ines" }
 glutin_frontend = { path = "../glutin_frontend" }
+serde = { version = "1.0", features = ["serde_derive"] }
+bincode = "1.1"
