--- a/nes_emulator/Cargo.toml
+++ b/nes_emulator/Cargo.toml
@@ -12,4 +12,5 @@ analyser = { path = "../analyser" }
 glutin_frontend = { path = "../glutin_frontend" }
 gif_renderer = { path = "../gif_renderer" }
 serde = { version = "1.0", features = ["serde_derive"] }
+serde-big-array = "0.1"
 bincode = "1.1"
