--- a/nes_specs/Cargo.toml
+++ b/nes_specs/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "nes"
+name = "nes_specs"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
-mos6502 = { path = "../mos6502" }
