Add name table gif renderer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "nes_specs",
     "nes_emulator",
     "nes_headless_frame",
+    "nes_name_table_debug",
     "nes_samples",
     "samples",
 ]
