--- a/gif_renderer/Cargo.toml
+++ b/gif_renderer/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 [dependencies]
 nes_headless_frame = { path = "../nes_headless_frame" }
 nes_specs = { path = "../nes_specs" }
+nes_name_table_debug = { path = "../nes_name_table_debug" }
 gif = "0.10"
