Move palette into its own crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "nes_emulator",
     "nes_headless_frame",
     "nes_name_table_debug",
+    "nes_palette",
     "nes_samples",
     "samples",
 ]
