--- a/glutin_frontend/Cargo.toml
+++ b/glutin_frontend/Cargo.toml
@@ -10,6 +10,7 @@ gfx_window_glutin = "0.31"
 gfx_device_gl = "0.16"
 gfx = "0.18"
 nes_specs = { path = "../nes_specs" }
+nes_palette = { path = "../nes_palette" }
 
 [[example]]
 name = "test_pattern"
