--- a/graphical_frontend/Cargo.toml
+++ b/graphical_frontend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "glutin_frontend"
+name = "graphical_frontend"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
