Start adding pixels frontend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "assembler",
     "gif_renderer",
     "graphical_frontend",
+    "graphical_frontend2",
     "ines",
     "mos6502",
     "nes_specs",
