--- a/graphical_frontend2/Cargo.toml
+++ b/graphical_frontend2/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
-pixels = "0.0"
+pixels = "0.0.3"
 winit = "0.22"
+winit_input_helper = "0.6"
 nes_specs = { path = "../nes_specs" }
