--- a/graphical_frontend2/Cargo.toml
+++ b/graphical_frontend2/Cargo.toml
@@ -9,3 +9,4 @@ pixels = "0.0.3"
 winit = "0.22"
 winit_input_helper = "0.6"
 nes_specs = { path = "../nes_specs" }
+nes_palette = { path = "../nes_palette" }
