--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "analyser",
     "assembler",
     "gif_renderer",
-    "graphical_frontend2",
+    "graphical_frontend",
     "ines",
     "mos6502",
     "nes_specs",
