--- a/butterfly/Cargo.toml
+++ b/butterfly/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "conway"
+name = "butterfly"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
