--- a/gif_renderer/Cargo.toml
+++ b/gif_renderer/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
+[features]
+background_pixel_ages = ["nes_headless_frame/background_pixel_ages"]
+
 [dependencies]
 nes_headless_frame = { path = "../nes_headless_frame" }
 nes_specs = { path = "../nes_specs" }
