--- a/nes_emulator/Cargo.toml
+++ b/nes_emulator/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
+[features]
+ppu_debug = ["gif_renderer/background_pixel_ages"]
+
 [dependencies]
 simon = "0.4"
 mos6502 = { path = "../mos6502" }
