--- a/nes_headless_frame/Cargo.toml
+++ b/nes_headless_frame/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
+[features]
+background_pixel_ages = []
+
 [dependencies]
 nes_specs = { path = "../nes_specs" }
 nes_palette = { path = "../nes_palette" }
