--- a/mos6502/Cargo.toml
+++ b/mos6502/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
+[features]
+serialize = ["serde"]
+
 [dependencies]
-serde = { version = "1.0", features = ["serde_derive"] }
+serde = { version = "1.0", features = ["serde_derive"], optional = true }
