--- a/butterfly/Cargo.toml
+++ b/butterfly/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
-assembler = { path = "../assembler" }
-mos6502 = { path = "../mos6502" }
+mos6502_assembler = { path = "../assembler" }
+mos6502_model = { path = "../model" }
 ines = { path = "../ines" }
