--- a/analyser/Cargo.toml
+++ b/analyser/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [dependencies]
-mos6502 = { path = "../mos6502" }
+mos6502_model = { path = "../model" }
