--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mos6502"
+name = "mos6502_model"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
