--- a/samples/Cargo.toml
+++ b/samples/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-assembler = { path = "../assembler" }
-mos6502 = { path = "../mos6502" }
+mos6502_assembler = { path = "../assembler" }
+mos6502_model = { path = "../model" }
