Specify version for mos6502_model crate

--- a/assembler/Cargo.toml
+++ b/assembler/Cargo.toml
@@ -12,4 +12,4 @@ documentation = "https://docs.rs/mos6502_assembler"
 
 
 [dependencies]
-mos6502_model = { path = "../model" }
+mos6502_model = { version = "0.1", path = "../model" }
