--- a/conway/Cargo.toml
+++ b/conway/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "conway"
+name = "nes-conway"
+description = "Generate a NES rom containing Conway's Game of Life"
 version = "0.1.0"
 authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
+license = "MIT"
+readme = "README.md"
+homepage = "https://gitlab.com/stevebob/mos6502/-/tree/master/conway"
+repository = "https://gitlab.com/stevebob/mos6502.git"
 
 [dependencies]
-mos6502_assembler = { path = "../assembler" }
-mos6502_model = { path = "../model" }
-ines = { path = "../ines" }
+mos6502_assembler = { version = "0.1", path = "../assembler" }
+mos6502_model = { version = "0.1", path = "../model" }
+ines = { version = "0.1", path = "../ines" }
