--- a/nes-emulator/Cargo.toml
+++ b/nes-emulator/Cargo.toml
@@ -10,6 +10,7 @@ ppu_debug = ["gif_renderer/background_pixel_ages"]
 [dependencies]
 meap = "0.4"  # { path = "/home/steve/src/meap" } # "0.4"
 env_logger = "0.8"
+log = "0.4"
 mos6502_model = { path = "../model", features = ["serialize"] }
 ines = { path = "../ines" }
 nes_specs = { path = "../nes-specs" }
