--- a/graphical-frontend/Cargo.toml
+++ b/graphical-frontend/Cargo.toml
@@ -9,3 +9,4 @@ pixels = "0.2"
 winit = "0.24"
 nes_specs = { path = "../nes-specs" }
 nes_palette = { path = "../nes-palette" }
+nes_render_output = { path = "../nes-render-output" }
