--- a/nes-emulator-core/Cargo.toml
+++ b/nes-emulator-core/Cargo.toml
@@ -14,6 +14,7 @@ ines = { path = "../ines" }
 nes_specs = { path = "../nes-specs" }
 analyser = { path = "../analyser" }
 nes_name_table_debug = { path = "../nes-name-table-debug" }
+nes_render_output = { path = "../nes-render-output" }
 serde = { version = "1.0", features = ["serde_derive"] }
 serde-big-array = "0.3"
 bincode = "1.1"
