--- a/nes-emulator/Cargo.toml
+++ b/nes-emulator/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 
 [features]
-ppu_debug = ["gif_renderer/background_pixel_ages"]
+ppu_debug = ["gif_renderer/background_pixel_ages", "nes_emulator_core/ppu_debug"]
 
 [dependencies]
 meap = "0.4"
@@ -19,3 +19,4 @@ serde = { version = "1.0", features = ["serde_derive"] }
 bincode = "1.1"
 nes_headless_frame = { path = "../nes-headless-frame" }
 nes_emulator_core = { path = "../nes-emulator-core" }
+nes_render_output = { path = "../nes-render-output" }
