Remove accidentally-committed debugging code

--- a/tetris-analyser/Cargo.toml
+++ b/tetris-analyser/Cargo.toml
@@ -10,5 +10,5 @@ ines = { version = "0.1", path = "../ines" }
 nes_emulator_core = { path = "../nes-emulator-core" }
 nes_render_output = { path = "../nes-render-output" }
 gif_renderer = { path = "../gif-renderer" }
-mos6502_model = { path = "../model", features = ["serialize"] }
+mos6502_model = { path = "../model" }
 analyser = { path = "../analyser" }
