--- a/tetris-hard-drop-patcher/Cargo.toml
+++ b/tetris-hard-drop-patcher/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["Stephen Sherratt <stephen@sherra.tt>"]
 edition = "2018"
 license = "MIT"
 readme = "README.md"
-homepage = "https://gitlab.com/stevebob/mos6502/-/tree/master/tetris-hard-drop-patcher"
-repository = "https://gitlab.com/stevebob/mos6502.git"
+homepage = "https://gitlab.com/gridbugs/mos6502/-/tree/main/tetris-hard-drop-patcher"
+repository = "https://gitlab.com/gridbugs/mos6502.git"
 
 [dependencies]
 meap = "0.5"
