Start tool to experiment with APU

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ resolver = "2"
 
 members = [
     "analyser",
+    "apu-experiment",
     "assembler",
     "gif-renderer",
     "graphical-frontend",
