--- a/nes-apu-experiment/Cargo.toml
+++ b/nes-apu-experiment/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 mos6502_assembler = { version = "0.2", path = "../assembler" }
 mos6502_model = { version = "0.2", path = "../model" }
 ines = { version = "0.2", path = "../ines" }
+meap = "0.5"
+hound = "3.5"
